force-app/main/default/objects/MUSW__Review__c/fields/AVO_AG_SW_Pump_Information_Form__c.field-meta.xml
<CustomField>
    <fullName>AVO_AG_SW_Pump_Information_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AG SW Pump Information Form</label>
    <type>Checkbox</type>
</CustomField>