force-app/main/default/objects/MUSW__Review__c/fields/AVO_Ag_Well_Data_form__c.field-meta.xml
<CustomField>
    <fullName>AVO_Ag_Well_Data_form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ag Well Data form</label>
    <type>Checkbox</type>
</CustomField>