force-app/main/default/objects/MUSW__Review__c/fields/AVO_Ag_Well_Data_Sheet__c.field-meta.xml
<CustomField>
    <fullName>AVO_Ag_Well_Data_Sheet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ag Well Data Sheet</label>
    <type>Checkbox</type>
</CustomField>