force-app/main/default/objects/MUSW__Review__c/fields/AVO_Agricultural_Well_pad_Picture__c.field-meta.xml
<CustomField>
    <fullName>AVO_Agricultural_Well_pad_Picture__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agricultural Well pad Picture</label>
    <type>Checkbox</type>
</CustomField>