force-app/main/default/objects/MUSW__Review__c/fields/AVO_Application_Form__c.field-meta.xml
<CustomField>
    <fullName>AVO_Application_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Application Form</label>
    <type>Checkbox</type>
</CustomField>