force-app/main/default/objects/MUSW__Review__c/fields/AVO_Compliance_Document__c.field-meta.xml
<CustomField>
    <fullName>AVO_Compliance_Document__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Compliance Document</label>
    <type>Checkbox</type>
</CustomField>