force-app/main/default/objects/MUSW__Review__c/fields/AVO_Consolidated_Conservation_Plan__c.field-meta.xml
<CustomField>
    <fullName>AVO_Consolidated_Conservation_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consolidated Conservation Plan</label>
    <type>Checkbox</type>
</CustomField>