force-app/main/default/objects/MUSW__Review__c/fields/AVO_Copied_from_Original_Permit__c.field-meta.xml
<CustomField>
    <fullName>AVO_Copied_from_Original_Permit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Copied from Original Permit</label>
    <type>Checkbox</type>
</CustomField>