force-app/main/default/objects/MUSW__Review__c/fields/AVO_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>AVO_Created_Date__c</fullName>
    <formula>DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date</label>
    <type>Date</type>
</CustomField>