force-app/main/default/objects/MUSW__Review__c/fields/AVO_Data_Field_Verification__c.field-meta.xml
<CustomField>
    <fullName>AVO_Data_Field_Verification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data Field Verification</label>
    <type>Checkbox</type>
</CustomField>