force-app/main/default/objects/MUSW__Review__c/fields/AVO_Document_Verification__c.field-meta.xml
<CustomField>
    <fullName>AVO_Document_Verification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Document Verification</label>
    <type>Checkbox</type>
</CustomField>