force-app/main/default/objects/MUSW__Review__c/fields/AVO_Documents_not_approved_for_Waiver__c.field-meta.xml
<CustomField>
    <fullName>AVO_Documents_not_approved_for_Waiver__c</fullName>
    <label>Documents not approved for Waiver</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AVO_Waiver_Documents</valueSetName>
    </valueSet>
</CustomField>