force-app/main/default/objects/MUSW__Review__c/fields/AVO_Documentss_not_approved_for_Waiver__c.field-meta.xml
<CustomField>
    <fullName>AVO_Documentss_not_approved_for_Waiver__c</fullName>
    <label>Documents not approved for Waiver</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>