force-app/main/default/objects/MUSW__Review__c/fields/AVO_Failed_Reason__c.field-meta.xml
<CustomField>
    <fullName>AVO_Failed_Reason__c</fullName>
    <label>Failed Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>