force-app/main/default/objects/MUSW__Review__c/fields/AVO_Flow_Meter_Approval_Form__c.field-meta.xml
<CustomField>
    <fullName>AVO_Flow_Meter_Approval_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flow Meter Approval Form</label>
    <type>Checkbox</type>
</CustomField>