force-app/main/default/objects/MUSW__Review__c/fields/AVO_Inspection__c.field-meta.xml
<CustomField>
    <fullName>AVO_Inspection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inspection</label>
    <referenceTo>MUSW__Inspection__c</referenceTo>
    <relationshipLabel>Reviews</relationshipLabel>
    <relationshipName>Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>