force-app/main/default/objects/MUSW__Review__c/fields/AVO_Low_Flow_Guidance__c.field-meta.xml
<CustomField>
    <fullName>AVO_Low_Flow_Guidance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Low Flow Guidance</label>
    <type>Checkbox</type>
</CustomField>