force-app/main/default/objects/MUSW__Review__c/fields/AVO_Mapping_Complete__c.field-meta.xml
<CustomField>
    <fullName>AVO_Mapping_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mapping Complete</label>
    <type>Checkbox</type>
</CustomField>