force-app/main/default/objects/MUSW__Review__c/fields/AVO_Meter_Installation_Approval__c.field-meta.xml
<CustomField>
    <fullName>AVO_Meter_Installation_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Meter Installation Approval</label>
    <type>Checkbox</type>
</CustomField>