force-app/main/default/objects/MUSW__Review__c/fields/AVO_Meter_Photos__c.field-meta.xml
<CustomField>
    <fullName>AVO_Meter_Photos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Meter Photos</label>
    <type>Checkbox</type>
</CustomField>