force-app/main/default/objects/MUSW__Review__c/fields/AVO_Meter_Transaction__c.field-meta.xml
<CustomField>
    <fullName>AVO_Meter_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Meter Transaction</label>
    <referenceTo>AVO_Meter_Transaction__c</referenceTo>
    <relationshipLabel>Reviews</relationshipLabel>
    <relationshipName>Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>