force-app/main/default/objects/MUSW__Review__c/fields/AVO_Miscellaneous__c.field-meta.xml
<CustomField>
    <fullName>AVO_Miscellaneous__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Miscellaneous</label>
    <type>Checkbox</type>
</CustomField>