force-app/main/default/objects/MUSW__Review__c/fields/AVO_Old_Meter_Status__c.field-meta.xml
<CustomField>
    <fullName>AVO_Old_Meter_Status__c</fullName>
    <label>Old Meter Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Meter Not Retrieved</fullName>
            </value>
            <value>
                <fullName>Meter Retrieved -Pending Disposal</fullName>
            </value>
            <value>
                <fullName>Meter Retrieved - To be Reused</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>