force-app/main/default/objects/MUSW__Review__c/fields/AVO_Ownership_Verification_Documentation__c.field-meta.xml
<CustomField>
    <fullName>AVO_Ownership_Verification_Documentation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ownership Verification Documentation</label>
    <type>Checkbox</type>
</CustomField>