force-app/main/default/objects/MUSW__Review__c/fields/AVO_Pending_Compliance_cse_fr_permit_hld__c.field-meta.xml
<CustomField>
    <fullName>AVO_Pending_Compliance_cse_fr_permit_hld__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pending Compliance case for permit holde</label>
    <type>Checkbox</type>
</CustomField>