force-app/main/default/objects/MUSW__Review__c/fields/AVO_Permission_to_Drill_urgent_Request__c.field-meta.xml
<CustomField>
    <fullName>AVO_Permission_to_Drill_urgent_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Permission to Drill/urgent Request</label>
    <type>Checkbox</type>
</CustomField>