force-app/main/default/objects/MUSW__Review__c/fields/AVO_Permit_Modification_Form__c.field-meta.xml
<CustomField>
    <fullName>AVO_Permit_Modification_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Permit Modification Form</label>
    <type>Checkbox</type>
</CustomField>