force-app/main/default/objects/MUSW__Review__c/fields/AVO_Pump_Data_sheet__c.field-meta.xml
<CustomField>
    <fullName>AVO_Pump_Data_sheet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pump Data sheet</label>
    <type>Checkbox</type>
</CustomField>