force-app/main/default/objects/MUSW__Review__c/fields/AVO_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>AVO_Record_Type__c</fullName>
    <label>Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>