force-app/main/default/objects/MUSW__Review__c/fields/Avo_Related_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Avo_Related_Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is used for Permit Additional Information Required and Application Additional Information Required lightning email templates.</description>
    <inlineHelpText>This is from the Permit and/or Application related records.</inlineHelpText>
    <label>Related Applicant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Reviews</relationshipLabel>
    <relationshipName>Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>