force-app/main/default/objects/MUSW__Review__c/fields/AVO_Request_for_Information_Expiration__c.field-meta.xml
<CustomField>
    <fullName>AVO_Request_for_Information_Expiration__c</fullName>
    <formula>AVO_Request_for_Information_Issuance__c + 30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request for Information Expiration</label>
    <type>Date</type>
</CustomField>