force-app/main/default/objects/MUSW__Review__c/fields/AVO_Request_for_Information_Issuance__c.field-meta.xml
<CustomField>
    <fullName>AVO_Request_for_Information_Issuance__c</fullName>
    <formula>AVO_Created_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request for Information Issuance</label>
    <type>Date</type>
</CustomField>