force-app/main/default/objects/MUSW__Review__c/fields/AVO_Request_Waiver_for_Low_Flow_Plan__c.field-meta.xml
<CustomField>
    <fullName>AVO_Request_Waiver_for_Low_Flow_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request Waiver for Low Flow Plan</label>
    <type>Checkbox</type>
</CustomField>