force-app/main/default/objects/MUSW__Review__c/fields/AVO_Request_Waiver_for_Well_Data_Form__c.field-meta.xml
<CustomField>
    <fullName>AVO_Request_Waiver_for_Well_Data_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request Waiver for Well Data Form</label>
    <type>Checkbox</type>
</CustomField>