force-app/main/default/objects/MUSW__Review__c/fields/AVO_Surface_Water_low_flow_plan__c.field-meta.xml
<CustomField>
    <fullName>AVO_Surface_Water_low_flow_plan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Surface Water low flow plan</label>
    <type>Checkbox</type>
</CustomField>