force-app/main/default/objects/MUSW__Review__c/fields/AVO_Surface_water_pump_data_form__c.field-meta.xml
<CustomField>
    <fullName>AVO_Surface_water_pump_data_form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Surface water pump data form</label>
    <type>Checkbox</type>
</CustomField>