force-app/main/default/objects/MUSW__Review__c/fields/AVO_Waive_Law_Rule_Plan_checks__c.field-meta.xml
<CustomField>
    <fullName>AVO_Waive_Law_Rule_Plan_checks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Waive Law/Rule/Plan checks</label>
    <type>Checkbox</type>
</CustomField>