force-app/main/default/objects/MUSW__Review__c/fields/AVO_Waiver_Documents__c.field-meta.xml
<CustomField>
    <fullName>AVO_Waiver_Documents__c</fullName>
    <label>Waiver Documents</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AVO_Waiver_Documents</valueSetName>
    </valueSet>
</CustomField>