force-app/main/default/objects/MUSW__Review__c/fields/AVO_Waiver_Documentss__c.field-meta.xml
<CustomField>
    <fullName>AVO_Waiver_Documentss__c</fullName>
    <label>Waiver Documents</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>