force-app/main/default/objects/MUSW__Review__c/fields/AVO_Water_Conservation_Plan_Document__c.field-meta.xml
<CustomField>
    <fullName>AVO_Water_Conservation_Plan_Document__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Water Conservation Plan Document</label>
    <type>Checkbox</type>
</CustomField>