force-app/main/default/objects/MUSW__Review__c/fields/AVO_Water_reuse_feasibility_study__c.field-meta.xml
<CustomField>
    <fullName>AVO_Water_reuse_feasibility_study__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Water reuse feasibility study</label>
    <type>Checkbox</type>
</CustomField>