force-app/main/default/objects/MUSW__Review__c/fields/AVO_Water_right_agreement_Property_Ownsp__c.field-meta.xml
<CustomField>
    <fullName>AVO_Water_right_agreement_Property_Ownsp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Water right agreement Property Ownership</label>
    <type>Checkbox</type>
</CustomField>