force-app/main/default/objects/MUSW__Review__c/fields/AVO_Water_use_conservation_Plan__c.field-meta.xml
<CustomField>
    <fullName>AVO_Water_use_conservation_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Water use conservation Plan</label>
    <type>Checkbox</type>
</CustomField>