force-app/main/default/objects/MUSW__Review__c/fields/AVO_Well_Construction_Inspection_form__c.field-meta.xml
<CustomField>
    <fullName>AVO_Well_Construction_Inspection_form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Well Construction Inspection form</label>
    <type>Checkbox</type>
</CustomField>