force-app/main/default/objects/MUSW__Review__c/fields/AVO_Well_DataSheet__c.field-meta.xml
<CustomField>
    <fullName>AVO_Well_DataSheet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Well DataSheet</label>
    <type>Checkbox</type>
</CustomField>