force-app/main/default/objects/MUSW__Review__c/fields/AVO_Well_Pad_Requirement__c.field-meta.xml
<CustomField>
    <fullName>AVO_Well_Pad_Requirement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Well Pad Requirement</label>
    <type>Checkbox</type>
</CustomField>