force-app/main/default/objects/MUSW__Review__c/fields/AVO_Well_plug_and_abandon_form__c.field-meta.xml
<CustomField>
    <fullName>AVO_Well_plug_and_abandon_form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Well plug and abandon form</label>
    <type>Checkbox</type>
</CustomField>