force-app/main/default/objects/MUSW__Review__c/fields/Irrigation_Efficiency_Certification_Form__c.field-meta.xml
<CustomField>
    <fullName>Irrigation_Efficiency_Certification_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Irrigation Efficiency Certification Form</label>
    <type>Checkbox</type>
</CustomField>