force-app/main/default/objects/MUSW__Review__c/fields/MUSW__Completed_Action__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Completed_Action__c</fullName>
    <label>Completed Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MUSW__Review_Completed_Actions</valueSetName>
    </valueSet>
</CustomField>