force-app/main/default/objects/MUSW__Review__c/fields/MUSW__Completed_DateTime__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Completed_DateTime__c</fullName>
    <description>The date and time when review was completed.</description>
    <inlineHelpText>When Review was completed</inlineHelpText>
    <label>Completed Date</label>
    <type>DateTime</type>
</CustomField>