force-app/main/default/objects/MUSW__Review__c/fields/MUSW__isApproved__c.field-meta.xml
<CustomField>
    <fullName>MUSW__isApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true when the review is approved.</description>
    <label>Approved</label>
    <type>Checkbox</type>
</CustomField>