force-app/main/default/objects/MUSW__Review__c/fields/MUSW__Related_To__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Related_To__c</fullName>
    <formula>HYPERLINK(
    &quot;/&quot; &amp; 
    IF(NOT(ISBLANK(MUSW__Permit2__c)), 
        MUSW__Permit2__c, 
        IF(NOT(ISBLANK(MUSW__Application2__c)), 
            MUSW__Application2__c, 
            IF(NOT(ISBLANK(MUSW__License2__c)), 
                MUSW__License2__c,
                IF(NOT(ISBLANK(MUSW__Project2__c)), 
                    MUSW__Project2__c, 
                    NULL
                )
            )
        )
    ),
    IF(NOT(ISBLANK(MUSW__Permit2__c)), 
        MUSW__Permit2__r.Name, 
        IF(NOT(ISBLANK(MUSW__Application2__c)), 
            MUSW__Application2__r.Name, 
            IF(NOT(ISBLANK(MUSW__License2__c)), 
                MUSW__License2__r.Name,
                IF(NOT(ISBLANK(MUSW__Project2__c)), 
                    MUSW__Project2__r.Name, 
                    NULL
                )
            )
        )
    ),
    &quot;_parent&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related To</label>
    <type>Text</type>
</CustomField>