force-app/main/default/objects/MUSW__Review__c/fields/MUSW__Resource__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource</label>
    <referenceTo>MUSW__Resource__c</referenceTo>
    <relationshipLabel>Reviews</relationshipLabel>
    <relationshipName>Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>