force-app/main/default/objects/MUSW__Review__c/fields/MUSW__Review_Template__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Review_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Review Template</label>
    <referenceTo>MUSW__Review_Template__c</referenceTo>
    <relationshipLabel>Reviews</relationshipLabel>
    <relationshipName>Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>