force-app/main/default/objects/MUSW__Review__c/fields/MUSW__Status__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Status__c</fullName>
    <description>Current status of the review.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Required</fullName>
            </value>
            <value>
                <fullName>Additional Information Required</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Completed to LOC Package</fullName>
            </value>
            <value>
                <fullName>Completed to Form Assessment</fullName>
            </value>
            <value>
                <fullName>Completed to Final Evaluation</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Pending Wavier Approval</fullName>
                <label>Pending Waiver Approval</label>
            </value>
            <value>
                <fullName>Wavier Denied</fullName>
                <label>Waiver Denied</label>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Reject</fullName>
            </value>
            <value>
                <fullName>Accept</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Fail Back</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>