force-app/main/default/objects/MUSW__Review__c/fields/MUSW__Submission__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Submission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the associated submission record(s).</description>
    <label>Submission</label>
    <referenceTo>MUSW__Submission__c</referenceTo>
    <relationshipLabel>Reviews</relationshipLabel>
    <relationshipName>Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>