force-app/main/default/objects/MUSW__Review__c/fields/MUSW__Type__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AG Program Manager Review</fullName>
                <label>Step 1 - AG Program Manager Approval</label>
            </value>
            <value>
                <fullName>Director Office Review</fullName>
            </value>
            <value>
                <fullName>Evaluation of Withdrawal 1st Cut</fullName>
            </value>
            <value>
                <fullName>Evaluation of Withdrawal 2nd Cut</fullName>
            </value>
            <value>
                <fullName>Irrigation Efficiency Cert Review</fullName>
            </value>
            <value>
                <fullName>Low Flow Protection Plan Review</fullName>
            </value>
            <value>
                <fullName>Special Appraisal</fullName>
            </value>
            <value>
                <fullName>Water Conservation Plan Review</fullName>
            </value>
            <value>
                <fullName>Water Reuse Visibility Study Review</fullName>
            </value>
            <value>
                <fullName>Water Shed Manager Review</fullName>
                <label>Step 3 - Water Shed Manager Approval</label>
            </value>
            <value>
                <fullName>Water Supply Manager Review</fullName>
                <label>Step 2 - Water Supply Manager Approval</label>
            </value>
            <value>
                <fullName>Well Data Form Review</fullName>
            </value>
            <value>
                <fullName>Completeness Review</fullName>
            </value>
            <value>
                <fullName>Waiver Review</fullName>
            </value>
            <value>
                <fullName>Withdrawal LOC Review</fullName>
            </value>
            <value>
                <fullName>Form Assessment Review</fullName>
            </value>
            <value>
                <fullName>Final Evaluation Review</fullName>
            </value>
            <value>
                <fullName>Meter Installation Review</fullName>
            </value>
            <value>
                <fullName>Requester Review</fullName>
            </value>
            <value>
                <fullName>Permitting Review</fullName>
            </value>
            <value>
                <fullName>Compliance Review</fullName>
            </value>
            <value>
                <fullName>Metering Review</fullName>
            </value>
            <value>
                <fullName>WWSA Review</fullName>
            </value>
            <value>
                <fullName>GIS Review</fullName>
            </value>
            <value>
                <fullName>Meter Review</fullName>
            </value>
            <value>
                <fullName>Step 5 - Director Approval</fullName>
            </value>
            <value>
                <fullName>Permit Management Review</fullName>
            </value>
            <value>
                <fullName>Step 4 - Deputy Director Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>