force-app/main/default/objects/MUSW__Review__c/fields/Previous_Review__c.field-meta.xml
<CustomField>
    <fullName>Previous_Review__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Review</label>
    <referenceTo>MUSW__Review__c</referenceTo>
    <relationshipLabel>Reviews</relationshipLabel>
    <relationshipName>Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>