force-app/main/default/objects/MUSW__Review__c/fields/Re_Review_Required__c.field-meta.xml
<CustomField>
    <fullName>Re_Review_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Re-Review Required</label>
    <type>Checkbox</type>
</CustomField>