force-app/main/default/objects/MUSW__Review__c/fields/Review_Count__c.field-meta.xml
<CustomField>
    <fullName>Review_Count__c</fullName>
    <label>Review Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>