force-app/main/default/objects/MUSW__Review__c/fields/Status2__c.field-meta.xml
<CustomField>
    <fullName>Status2__c</fullName>
    <formula>Case( MUSW__Status__c, 
&quot;Approved&quot;,&quot;Approved&quot;, 
&quot;Denied&quot;,&quot;Failed&quot;, 
&quot;Pending&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Status</label>
    <type>Text</type>
</CustomField>