force-app/main/default/objects/MUSW__Review__c/fields/Well_Plug_and_Abandon_Form__c.field-meta.xml
<CustomField>
    <fullName>Well_Plug_and_Abandon_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Well Plug and Abandon Form</label>
    <type>Checkbox</type>
</CustomField>