force-app/main/default/objects/MUSW__Review__c/recordTypes/AVO_Final_Evaluation_Review.recordType-meta.xml
<RecordType>
    <fullName>AVO_Final_Evaluation_Review</fullName>
    <active>true</active>
    <description>Record type for Final Evaluation Review</description>
    <label>Final Evaluation Review</label>
</RecordType>