force-app/main/default/objects/MUSW__Review__c/recordTypes/AVO_Form_Assessment_Review.recordType-meta.xml
<RecordType>
    <fullName>AVO_Form_Assessment_Review</fullName>
    <active>true</active>
    <description>Record type for Form Assessment Review</description>
    <label>Form Assessment Review</label>
</RecordType>