force-app/main/default/objects/MUSW__Review__c/recordTypes/AVO_Meter_Installation_Review.recordType-meta.xml
<RecordType>
    <fullName>AVO_Meter_Installation_Review</fullName>
    <active>true</active>
    <description>Record type for Meter Installation Review</description>
    <label>Meter Installation Review</label>
</RecordType>