force-app/main/default/objects/MUSW__Review__c/recordTypes/AVO_Metering_Review.recordType-meta.xml
<RecordType>
    <fullName>AVO_Metering_Review</fullName>
    <active>true</active>
    <label>Metering Review</label>
</RecordType>