force-app/main/default/objects/MUSW__Review__c/recordTypes/AVO_Review_Default.recordType-meta.xml
<RecordType>
    <fullName>AVO_Review_Default</fullName>
    <active>true</active>
    <label>AVO Review Default</label>
</RecordType>