force-app/main/default/objects/MUSW__Review__c/recordTypes/AVO_Review_Default_Completeness_Review_Only.recordType-meta.xml
<RecordType>
    <fullName>AVO_Review_Default_Completeness_Review_Only</fullName>
    <active>true</active>
    <description>Record type for Completeness Review Only</description>
    <label>AVO Review Default - Completeness Review Only</label>
</RecordType>