force-app/main/default/objects/MUSW__Review__c/recordTypes/AVO_Review_Default_Plus.recordType-meta.xml
<RecordType>
    <fullName>AVO_Review_Default_Plus</fullName>
    <active>true</active>
    <label>AVO Review Default Plus</label>
</RecordType>