force-app/main/default/objects/MUSW__Review__c/recordTypes/AVO_Review_Default_Withdrawal_LOC_Review_Only.recordType-meta.xml
<RecordType>
    <fullName>AVO_Review_Default_Withdrawal_LOC_Review_Only</fullName>
    <active>true</active>
    <description>AVO Review Default - Withdrawal LOC Review Only</description>
    <label>AVO Review Default - Withdrawal LOC Review Only</label>
</RecordType>