force-app/main/default/objects/MUSW__Review__c/recordTypes/AVO_Site_Visit_Review.recordType-meta.xml
<RecordType>
    <fullName>AVO_Site_Visit_Review</fullName>
    <active>true</active>
    <label>Site Visit Review</label>
</RecordType>