force-app/main/default/objects/MUSW__Review__c/recordTypes/AVO_Waiver_Review.recordType-meta.xml
<RecordType>
    <fullName>AVO_Waiver_Review</fullName>
    <active>true</active>
    <description>Record type for Waiver Review</description>
    <label>Waiver Review</label>
</RecordType>