force-app/main/default/objects/MUSW__Review__c/recordTypes/AVO_Withdrawal_LOC_Review.recordType-meta.xml
<RecordType>
    <fullName>AVO_Withdrawal_LOC_Review</fullName>
    <active>true</active>
    <label>AVO Withdrawal LOC Review</label>
</RecordType>