force-app/main/default/objects/MUSW__Review__c/recordTypes/License_Review.recordType-meta.xml
<RecordType>
    <fullName>License_Review</fullName>
    <active>true</active>
    <label>License Review</label>
</RecordType>